--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
 spring.datasource.username=postgres
@@ -8,6 +8,7 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 spring.flyway.locations=classpath:db/migration
 
+#spring.data.rest.base-path=com/example/bookstore
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
